# recipe-book

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml  test.sh
.github/workflows/: deploy.yml  pr.yml
book/: .gitignore  recipes.typ
book/extras/sections/: Baking.md  Component.md  Main.md  Pickle.md  Side.md  Snack.md  Sweet.md
book/helpers/: recipe.typ  title.typ
housekeeping/: __main__.py
housekeeping/commands/: export_json.py  export_json_ld.py  export_typst.py  normalise.py
housekeeping/models/: ingredients.py  isbn.py  recipes.py  repository.py  time_range.py  time_range_test.py
housekeeping/models/json_ld/: recipe.py
housekeeping/recipes_tests/: README.md  ingredients_test.py  json_ld_test.py
recipes/ingredients/can/: Black Beans.yaml  Black Eye Beans.yaml  Black-eyed Beans.yaml  Borlotti Beans.yaml  Butter Beans.yaml  Canned Water Chestnuts.yaml  Cannellini Beans.yaml  Chickpeas.yaml  Chopped Tomatoes.yaml  Haricot Beans.yaml  Kidney Beans.yaml
recipes/ingredients/singles/: Apple.yaml  Artichokes.yaml  Aubergine.yaml  Avocados.yaml  Baby Gem Lettuce.yaml  Basil.yaml  Bay Leaves.yaml  Bouquet Garni Sachet.yaml  Bread Roll.yaml  Bread.yaml  Broccoli Head.yaml  Celery Leaves.yaml  Celery.yaml  Chicken Breasts.yaml  Chives.yaml  Chocolate Flake.yaml  Ciabatta loaves.yaml  Cinnamon Stick.yaml  Clementine.yaml  Cloves.yaml  Cucumbers.yaml  Curry Leaves.yaml  Dried Daun Pandan.yaml  Dried Parsley.yaml  Eggs.yaml  Fresh Chillies.yaml  (+30 more)
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/src/: data.ts  types.ts  utils.ts
(+413 files in other folders)
