[project]
name = "recipe-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.18",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["housekeeping"]
